🔨 Implemented search-modal scripts

--- a/index.html
+++ b/index.html
@@ -2710,5 +2710,6 @@
     <script src="./js/sidebar.js"></script>
     <script src="./js/sidebar-dropdown.js"></script>
     <script src="./js/section-header.js"></script>
+    <script src="./js/search-modal.js"></script>
   </body>
 </html>
