--- a/index.html
+++ b/index.html
@@ -2711,5 +2711,6 @@
     <script src="./js/sidebar-dropdown.js"></script>
     <script src="./js/section-header.js"></script>
     <script src="./js/search-modal.js"></script>
+    <script src="./js/order-cta.js"></script>
   </body>
 </html>
