--- a/index.html
+++ b/index.html
@@ -2658,7 +2658,7 @@
         </div>
 
         <div class="button-group">
-          <button class="btn-fill-secondary btn-48`" type="button">
+          <button class="btn-fill-secondary btn-48" type="button">
             장바구니
           </button>
           <button class="btn-fill-primary btn-48" type="submit">
