--- a/index.html
+++ b/index.html
@@ -2712,5 +2712,6 @@
     <script src="./js/section-header.js"></script>
     <script src="./js/search-modal.js"></script>
     <script src="./js/order-cta.js"></script>
+    <script src="./js/my-menu.js"></script>
   </body>
 </html>
