--- a/index.html
+++ b/index.html
@@ -2713,5 +2713,6 @@
     <script src="./js/search-modal.js"></script>
     <script src="./js/order-cta.js"></script>
     <script src="./js/my-menu.js"></script>
+    <script src="./js/gnb-serach.js"></script>
   </body>
 </html>
