--- a/index.html
+++ b/index.html
@@ -2516,7 +2516,7 @@
             <section class="search-history">
               <header class="search-history-header">
                 <h2 class="title">최근 검색어</h2>
-                <button type="button">전체 삭제</button>
+                <button type="button">전체 삭제</button>
               </header>
 
               <!-- 최근 검색어가 있을 때 -->
@@ -2714,5 +2714,6 @@
     <script src="./js/order-cta.js"></script>
     <script src="./js/my-menu.js"></script>
     <script src="./js/gnb-serach.js"></script>
+    <script src="./js/review.js"></script>
   </body>
 </html>
