🚧 Implemented selecting product-tab-items

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                       <div class="my-menu-content">
                         <ul class="my-menu-list">
                           <li class="my-menu-item">
-                            <a href="/">마이페이지</a>
+                            <a href="https://github.com/yejinc" 1target="_blank"
+                              >마이페이지</a
+                            >
                           </li>
                           <li class="my-menu-item">
                             <a href="/">나의 쇼핑</a>
@@ -2473,7 +2475,7 @@
         <div class="sidebar-menu-my">
           <ul class="sidebar-menu-my-list">
             <li class="sidebar-menu-my-list-item">
-              <a href="/">마이페이지</a>
+              <a href="https://github.com/yejinc" target="_blank">마이페이지</a>
             </li>
             <li class="sidebar-menu-my-list-item">
               <a href="/">나의 쇼핑</a>
@@ -2715,5 +2717,6 @@
     <script src="./js/my-menu.js"></script>
     <script src="./js/gnb-serach.js"></script>
     <script src="./js/review.js"></script>
+    <script src="./js/product-tab.js"></script>
   </body>
 </html>
