--- a/index.html
+++ b/index.html
@@ -2708,6 +2708,7 @@
     <div class="overlay" aria-hidden="true"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./js/carousels.js"></script>
     <script src="./js/sidebar.js"></script>
     <script src="./js/sidebar-dropdown.js"></script>
